--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <div id="map-root"></div>
-    <script type="module" src="/src/map.tsx"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
